2007-06-07  Sven Neumann  <sven@gimp.org>

	* app/dialogs/Makefile.am
	* menus/Makefile.am: when calling xsltproc, use the stylesheet from
	$(srcdir). From the patch attached to bug #444960.

2007-06-07  Sven Neumann  <sven@gimp.org>

	* app/dialogs/Makefile.am: bail out with an error if xsltproc is
	missing and authors.h needs to be regenerated.

	* libgimpwidgets/Makefile.am: let gimpwidgets-private.lo, not the
	C file, depend on gimp-wilber-pixbufs.h. From the patch attached to
	bug #444960.

2007-06-07  Sven Neumann  <sven@gimp.org>

	* app/dialogs/tips-dialog.c: converted to a GimpDialog.

2007-06-06  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection.[ch]: minor API cleanup. Use horizontal
	and vertical scale to determine the pyramid level to use.

	* app/display/gimpdisplayshell-draw.c
	* app/display/gimpdisplayshell-render.c: follow the API change.

2007-06-06  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection.c: cosmetics.

2007-06-06  Martin Nordholts  <martinn@svn.gnome.org>

	Implemented an image pyramid for the GimpProjection. An image
	pyramid caches a projection at several sizes, causing the
	rendering code not to have to swap in all tiles of a (potentially)
	large image; it can use small versions of the projection if the
	user is zoomed out.

	The image pyramid also imroves visual quality, especially at zoom
	levels where there is a pyramid level that matches perfectly (i.e.
	at e.g. 50%, 25%, and 12.5% zoom). A step on the right track for
	bug #76096.

	* app/core/gimpprojection.[ch]: Adjusted to make use of an image
	pyramid. GimpProjection now keeps an array of TileManager:s, one
	per pyramid level. Renamed _alloc_tiles to _alloc_levels.

	* app/display/gimpdisplayshell-draw.c: (gimp_display_shell_draw_area):
	Use the right GimpProjection level when drawing

	* app/display/gimpdisplayshell-render.c: (render_image_init_info_full):
	Setup RenderInfo with level in mind
